# Location: ./crates/apl-pii-scanner/Cargo.toml
# Copyright 2026
# SPDX-License-Identifier: Apache-2.0
# Authors: Teryl Taylor
#
# apl-pii-scanner — CMF plugin that detects PII patterns (SSN,
# credit card, email) in tool/prompt/resource args and either denies
# the call, taints the session, or redacts the matching values.

[package]
name = "apl-pii-scanner"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true

[dependencies]
cpex-core = { path = "../cpex-core" }

async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
regex       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
