# Location: ./crates/cpex-builtins/Cargo.toml
# Copyright 2025
# SPDX-License-Identifier: Apache-2.0
# Authors: Fred Araujo
#
# cpex-builtins — the bundled CPEX extension set behind cargo features.
#
# A host depends on this one crate to get the built-in plugins, PDPs, and
# session stores; the feature list picks exactly what compiles in and gets
# registered. `register_builtins` / `builtin_pdps` /
# `builtin_session_store_factories` are #[cfg]-gated to the selected
# features, so there is no code change between configurations — only the
# feature list. Both the `cpex` facade and `cpex-ffi` delegate here so the
# registration set lives in one place.

[package]
name = "cpex-builtins"
description = "CPEX built-in plugins, PDPs, and session stores with feature-gated registration."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
# The common in-process set: the four hook plugins plus both PDPs. Heavier
# / external-backend extensions (valkey) stay opt-in via `full`.
default = ["pii-scanner", "audit-logger", "identity-jwt", "delegator-oauth", "elicitation-ciba", "cedar-direct", "cel"]

# Each feature pulls exactly one builtin crate.
pii-scanner      = ["dep:cpex-plugin-pii-scanner"]
audit-logger     = ["dep:cpex-plugin-audit-logger"]
identity-jwt     = ["dep:cpex-plugin-identity-jwt"]
delegator-oauth  = ["dep:cpex-plugin-delegator-oauth"]
elicitation-ciba = ["dep:cpex-plugin-elicitation-ciba"]
cedar-direct     = ["dep:cpex-pdp-cedar-direct"]
cel              = ["dep:cpex-pdp-cel"]
valkey           = ["dep:cpex-session-valkey"]

# Everything wired here, including the Valkey session store (redis client +
# rustls TLS stack).
full = ["default", "valkey"]

[dependencies]
# Registration targets — the manager, PDP factory trait, and APL options.
cpex-core = { path = "../cpex-core", version = "0.2.0" }
apl-core = { path = "../apl-core", version = "0.2.0" }
apl-cpex = { path = "../apl-cpex", version = "0.2.0" }

# Builtin extension crates — each behind its feature.
cpex-plugin-pii-scanner = { path = "../../builtins/plugins/pii-scanner", version = "0.2.0", optional = true }
cpex-plugin-audit-logger = { path = "../../builtins/plugins/audit-logger", version = "0.2.0", optional = true }
cpex-plugin-identity-jwt = { path = "../../builtins/plugins/identity-jwt", version = "0.2.0", optional = true }
cpex-plugin-delegator-oauth = { path = "../../builtins/plugins/delegator-oauth", version = "0.2.0", optional = true }
cpex-plugin-elicitation-ciba = { path = "../../builtins/plugins/elicitation-ciba", version = "0.2.0", optional = true }
cpex-pdp-cedar-direct = { path = "../../builtins/pdps/cedar-direct", version = "0.2.0", optional = true }
cpex-pdp-cel = { path = "../../builtins/pdps/cel", version = "0.2.0", optional = true }
cpex-session-valkey = { path = "../../builtins/session/valkey", version = "0.2.0", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
