# Location: ./crates/cpex-core/Cargo.toml
# Copyright 2025
# SPDX-License-Identifier: Apache-2.0
# Authors: Teryl Taylor
#
# CPEX Core — pure Rust plugin runtime with no FFI dependencies.
# Contains the PluginManager, 5-phase executor, hook registry,
# config parser, and all core types.

[package]
name = "cpex-core"
description = "CPEX plugin runtime core — PluginManager, executor, hooks, and config."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = ["runtime"]
runtime = ["dep:tokio", "dep:tokio-util", "dep:cpex-orchestration", "dep:arc-swap"]

[dependencies]
# --- Always-on dependencies (WASM-compatible) ---
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
hashbrown = { workspace = true }
wildmatch = { workspace = true }
chrono = { workspace = true }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# --- Runtime-only dependencies (require tokio, not WASM-compatible) ---
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
arc-swap = { workspace = true, optional = true }
cpex-orchestration = { workspace = true, optional = true }

[lints]
workspace = true
