# Location: ./crates/cpex-ffi/Cargo.toml
# Copyright 2025
# SPDX-License-Identifier: Apache-2.0
# Authors: Teryl Taylor
#
# CPEX FFI — C API for embedding the CPEX runtime in Go, Python, etc.
# Compiles to a shared library (cdylib) exporting extern "C" functions.
# Payloads cross the FFI boundary as MessagePack bytes.

[package]
name = "cpex-ffi"
description = "CPEX C FFI — shared library for Go/Python/WASM host bindings."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
cpex-core = { path = "../cpex-core" }
# APL governance layer — bundled so Go/Python hosts can enable APL
# policies, route handlers, and the standard plugin/PDP factories via
# the `cpex_apl_install` FFI entry point. Symbols survive in the
# staticlib because that entry point references each factory.
apl-cpex = { path = "../apl-cpex" }
apl-pii-scanner = { path = "../apl-pii-scanner" }
apl-audit-logger = { path = "../apl-audit-logger" }
apl-identity-jwt = { path = "../apl-identity-jwt" }
apl-delegator-oauth = { path = "../apl-delegator-oauth" }
apl-pdp-cedar-direct = { path = "../apl-pdp-cedar-direct" }
# Heavy (~200 transitive deps via the Cedarling git dep); kept out of the
# default `.a` and behind the `cedarling` feature.
apl-cedarling = { path = "../apl-cedarling", optional = true }
# Valkey-backed SessionStore (redis client + rustls TLS stack). Optional
# and behind the `valkey` feature so the default `.a` artifact size is
# unaffected; default-members exclusion alone does NOT keep its object
# code out of a `-p cpex-ffi` build — the feature gate does.
apl-session-valkey = { path = "../apl-session-valkey", optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
serde_bytes = { workspace = true }
tracing = { workspace = true }

[features]
default = []
# Opt-in Cedarling-backed identity + PDP. Build with
# `cargo build -p cpex-ffi --features cedarling`.
cedarling = ["dep:apl-cedarling"]
# Opt-in Valkey-backed SessionStore. Build with
# `cargo build -p cpex-ffi --features valkey`.
valkey = ["dep:apl-session-valkey"]

[dev-dependencies]
async-trait = { workspace = true }
