# Location: ./crates/cpex-ffi/Cargo.toml
# Copyright 2025
# SPDX-License-Identifier: Apache-2.0
# Authors: Teryl Taylor
#
# CPEX FFI — C API for embedding the CPEX runtime in Go, Python, etc.
# Compiles to a shared library (cdylib) exporting extern "C" functions.
# Payloads cross the FFI boundary as MessagePack bytes.

[package]
name = "cpex-ffi"
description = "CPEX C FFI — shared library for Go/Python/WASM host bindings."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
cpex-core = { path = "../cpex-core" }
# APL governance layer — bundled so Go/Python hosts can enable APL
# policies and route handlers via the `cpex_apl_install` FFI entry point.
apl-cpex = { path = "../apl-cpex" }
# The builtin extension set. `cpex_apl_install` delegates registration to
# cpex-builtins, whose `register_builtins` expands to explicit
# `register_factory` calls — so the factory symbols survive in the
# staticlib (no inventory/linkme link-section GC hazard). The feature set
# below is the exact bundle the default `.a` ships: four hook plugins plus
# the cedar-direct PDP (note: NOT `cel`, matching the prior footprint).
cpex-builtins = { path = "../cpex-builtins", default-features = false, features = [
    "pii-scanner",
    "audit-logger",
    "identity-jwt",
    "delegator-oauth",
    "cedar-direct",
] }
# Heavy (~200 transitive deps via the Cedarling git dep); kept out of the
# default `.a` and behind the `cedarling` feature.
apl-cedarling = { path = "../apl-cedarling", optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
serde_bytes = { workspace = true }
tracing = { workspace = true }

[features]
default = []
# Opt-in Cedarling-backed identity + PDP. Build with
# `cargo build -p cpex-ffi --features cedarling`.
cedarling = ["dep:apl-cedarling"]
# Opt-in Valkey-backed SessionStore (redis client + rustls TLS stack).
# Routed through cpex-builtins so the `.a` artifact size is unaffected
# without the feature. Build with `cargo build -p cpex-ffi --features valkey`.
valkey = ["cpex-builtins/valkey"]

[dev-dependencies]
async-trait = { workspace = true }
