# Location: ./crates/cpex-hosts-python/Cargo.toml
# Copyright 2026
# SPDX-License-Identifier: Apache-2.0
# Authors: Ted Habeck
#
# cpex-hosts-python — subprocess-isolated Python plugin adapter for the
# CPEX Rust PluginManager. Loads Python plugin classes via
# `kind: "isolated_venv"` and `config: class_name: module.ClassName` YAML config and drives
# them over the JSON-lines stdin/stdout protocol used by worker.py.

[package]
name = "cpex-hosts-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cpex-core = { path = "../cpex-core" }

async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true, features = ["process", "io-util"] }
uuid        = { workspace = true }
sha2        = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tempfile = "3"
