# Location: ./crates/cpex-python/Cargo.toml
# Copyright 2025
# SPDX-License-Identifier: Apache-2.0
# Authors: Teryl Taylor
#
# CPEX Python — PyO3 bindings for embedding the CPEX runtime in Python.
# Compiles to a Python extension module (cdylib) using PyO3.
# Provides native Python API with no serialization overhead.

[package]
name = "cpex-python"
description = "CPEX PyO3 bindings — native Python extension for the CPEX plugin runtime."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "cpex_native"
crate-type = ["cdylib"]

[dependencies]
cpex-core = { path = "../cpex-core" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py311"] }
pyo3-async-runtimes = { version = "0.21", features = ["tokio-runtime"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }