[package]
name = "cpex-wasm-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["identity-checker"]
identity-checker = []
header-injector = []
audit-logger = []

[dependencies]
wit-bindgen = "0.57"
wit-bindgen-rt = "0.44"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
cpex-core = { path = "../cpex-core", default-features = false }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.component]
package = "cpex:plugin"
